# barotropic-model

./: .gitmodules  CMakeLists.txt  README.md
doc/lat_grid.graffle/: data.plist
src/: BarotropicModel.cpp  BarotropicModel.h  BarotropicModel_A_ImplicitMidpoint.cpp  BarotropicModel_A_ImplicitMidpoint.h  BarotropicModel_C_ImplicitMidpoint.cpp  BarotropicModel_C_ImplicitMidpoint.h  BarotropicTestCase.h  GeostrophicRelation.cpp  GeostrophicRelation.h  RossbyHaurwitzTestCase.cpp  RossbyHaurwitzTestCase.h  ToyTestCase.cpp  ToyTestCase.h  barotropic_model.h  barotropic_model_commons.h  commons.h  main.cpp  run_model.cpp
tool/: plot.ncl
tools/: make_mov.sh  plot.ncl
